--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql-request",
-  "main": "./build/esm/index.js",
+  "main": "./src/index.ts",
   "version": "0.0.0-dripip",
   "type": "module",
   "exports": {
@@ -64,7 +64,8 @@
     "@graphql-typed-document-node/core": "^3.1.1",
     "cross-fetch": "^3.1.5",
     "extract-files": "^9.0.0",
-    "form-data": "^3.0.0"
+    "form-data": "^3.0.0",
+    "graphql-request": "https://github.com/zeptonow/graphql-request"
   },
   "peerDependencies": {
     "graphql": "14 - 16"
